Revision history for {{$dist->name}}

{{$NEXT}}
          - remove additional options in constructor before passing to
            LWP::UserAgent (was causing a carp when $^W was set) - thanks for
            the report and patch, Nigel Gregoire and Michael Schulthess!

0.010     2012-10-06 16:47:33 PDT-0700 (Karen Etheridge)
          - documentation on integration with XML::Compile::SOAP
          - questionable uses of eval { $foo->isa } converted to Safe::Isa
          - imported symbols are no longer available as methods

0.009     2012-08-29 09:54:34 PDT-0700 (Karen Etheridge)
          - fix test to work with older (pre-6.00) LWP::UserAgent, when
            _new_response did not take a content argument

0.008     2012-08-21 12:48:35 PDT-0700 (Karen Etheridge)
          - better handling when the response implementation dies, either
            with an error message or an HTTP::Response object
          - network_fallback and map_network_response features added, for
            sending any or all requests through to the real LWP::UserAgent
          - new feature: "last_useragent", for getting the last useragent
            object used globally
          - allow exact string matching against domains to work even for
            domains specified via a string-overloaded object
          - bug fix: properly mask existing mappings in
            $ua->map_response(..., undef) (v0.007)

0.007     2012-08-14 13:56:50 PDT-0700 (Karen Etheridge)
          - cleanup of domain->PSGI app functionality for stable release:
            - string mappings in map_response now match against the URI host,
              not the full URI string
            - register_domain is now called register_psgi; unregister_domain
              is now unregister_psgi; unregister_all is removed, as unmap_all
              will do the right thing
            - domain mappings no longer take priority over other mapped
              responses; all mappings are now tested in the order they were